# workbench

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/DISCUSSION_TEMPLATE/: agent-showcase.yml  general.yml  help.yml  ideas.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
examples/: README.md
examples/crewai/: .env.example  README.md  main.py  nextjs_landing_page.py  pyproject.toml
examples/langchain/: README.md  main.py  pyproject.toml
